--- a/modules/MMM-News/MMM-News.css
+++ b/modules/MMM-News/MMM-News.css
@@ -105,7 +105,7 @@
 }
 
 #NEWS {
-  line-height:1.1em;
+  line-height:1.4em;
 }
 
 #NEWS_CONTENT {
@@ -121,8 +121,9 @@
 }
 
 #NEWS .content {
-  padding:10px;
-  font-size:90%;
+  padding:20px;
+  font-size:120%;
+  color: #fff;
 }
 
 #NEWS .content .articleImage {
@@ -152,7 +153,7 @@
 /* Type: Horizontal */
 
 #NEWS.horizontal {
-  font-size:calc(2vw);
+  font-size:calc(2.3vw);
   width:100%;
 }
 
